# SCF-Solver

./: CMakeLists.txt  main.cpp
src/Basis/: Basis.cpp  Basis.h  Shell.cpp  Shell.h  ShellPair.cpp  ShellPair.h
src/Integrals/: Integrals.cpp  Integrals.h
src/Molecule/: Atom.cpp  Atom.h  Molecule.cpp  Molecule.h
src/Parser/: FileParser.h  MoleculeParser.cpp  MoleculeParser.h
src/Scf/: Scf.h
src/Utils/: Vector.cpp  Vector3.h
